--- a/KeyboardLock.csproj
+++ b/KeyboardLock.csproj
@@ -109,13 +109,16 @@
     <None Include="Connected Services\kb\item1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\kb\KeyBoardService1.wsdl" />
+    <None Include="Connected Services\kb\KeyBoardService.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Connected Services\kb\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\kb\item.disco" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Connected Services\kb\configuration91.svcinfo" />
@@ -128,8 +131,5 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Connected Services\kb\item.disco" />
   </ItemGroup>
 </Project>
