--- a/app.config
+++ b/app.config
@@ -2,14 +2,25 @@
 <configuration>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup><system.serviceModel>
         <bindings>
-            <basicHttpBinding>
-                <binding name="TylerComputer" />
-            </basicHttpBinding>
+            <customBinding>
+                <binding name="CustomBinding_IMyHelpPageContract">
+                    <textMessageEncoding messageVersion="Soap12" />
+                </binding>
+            </customBinding>
+            <wsDualHttpBinding>
+                <binding name="WSDualHttpBinding_IKeyboard" />
+            </wsDualHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://192.168.0.18:8080/" binding="basicHttpBinding"
-                bindingConfiguration="TylerComputer" contract="kb.IKeyboard"
-                name="TylerComputer" />
+            <endpoint address="http://192.168.100.139:8080/E1" binding="wsDualHttpBinding"
+                bindingConfiguration="WSDualHttpBinding_IKeyboard" contract="kb.IKeyboard"
+                name="WSDualHttpBinding_IKeyboard">
+                <identity>
+                    <userPrincipalName value="tyler@impelsystems.ca" />
+                </identity>
+            </endpoint>
+            <endpoint binding="customBinding" bindingConfiguration="CustomBinding_IMyHelpPageContract"
+                contract="kb.IMyHelpPageContract" name="CustomBinding_IMyHelpPageContract" />
         </client>
     </system.serviceModel>
 </configuration>
