--- a/KeyboardLock.csproj
+++ b/KeyboardLock.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>KeyboardLock</RootNamespace>
     <AssemblyName>KeyboardLock</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <StartupObject>
     </StartupObject>
@@ -66,6 +66,7 @@
   </Target>
   -->
   <ItemGroup>
+    <Compile Include="CallbackHandle.cs" />
     <Compile Include="Connected Services\kb\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -109,16 +110,19 @@
     <None Include="Connected Services\kb\item1.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Connected Services\kb\KeyBoardService.wsdl" />
+    <None Include="Connected Services\kb\KeyboardService1.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Connected Services\kb\" />
+    <ProjectReference Include="Host\GettingStartedHost\GettingStartedHost.csproj">
+      <Project>{a9f20edb-dac0-4e8b-be14-c9c34ad782ab}</Project>
+      <Name>GettingStartedHost</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\kb\item.disco" />
+    <WCFMetadataStorage Include="Connected Services\kb\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Connected Services\kb\configuration91.svcinfo" />
@@ -131,5 +135,8 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\kb\item.disco" />
   </ItemGroup>
 </Project>
