--- a/Host/GettingStartedHost/KeyboardLockHost.csproj
+++ b/Host/GettingStartedHost/KeyboardLockHost.csproj
@@ -56,10 +56,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IService1.cs" />
-    <Compile Include="nwkeylock.cs" />
+    <Compile Include="ServiceInterface.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service1.cs" />
+    <Compile Include="ServiceLibrary.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
